Lift overflow problem solved
Border size changes when using zoom-in/zoom-out. Setting margin bottom instead of border-bottom to make it responsive.

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
 }
 
 
-@media (max-width: 800px) {
+@media (max-width: 1072px) {
     .form input {
         margin: 10px 0;
     }
@@ -62,13 +62,14 @@ body {
     padding: 1% 1% 0 1%;
     width: 100%;*/
     height: 100px;
-    background-color: #f7f7f7;
-    border-bottom: 3px solid lightgrey;
+    background-color: #d4d4d4;
+    /*border-bottom: 3px solid lightgrey;*/
+    margin-bottom: 3px;
 }
 
 .lift {
     height: 100%;
-    width: 100px;
+    width: 90px;
     background-color: #929aab;
     margin-left: 10px;
     display: flex;
